implementing working stats

--- a/config.json
+++ b/config.json
@@ -1,6 +1,25 @@
 {
     "guildId": "1163632023076872244",
     "channels": {
-        "membersList": "1189467374265577512"
+        "cadet": "1189467374265577512",
+        "recruit": "1189987833272873092",
+        "echowest": "1189987863597691120",
+        "echoeast": "1189987892223815740",
+        "foxtrotwest": "1189987933831319744",
+        "foxtroteast": "1189987969646481551",
+        "reaper": "1189987992102781079"
+    },
+    "roles": {
+        "cadet": "1163925341593677875",
+        "recruit": "1164313859310497945",
+        "echowest": "1164438362371932230",
+        "echoeast": "1164438307577532426",
+        "foxtrotwest": "1164438466310967296",
+        "foxtroteast": "1164438425059995688",
+        "reaper": "1164274765251477565"
+    },
+    "chars": {
+        "space": "᲼",
+        "colon": "∶"
     }
 }
