--- a/config.json
+++ b/config.json
@@ -19,7 +19,7 @@
         "reaper": "1164274765251477565"
     },
     "chars": {
-        "space": "᲼",
+        "space": "",
         "colon": "∶"
     }
 }
