adding golf to stats

--- a/config.json
+++ b/config.json
@@ -7,7 +7,9 @@
         "echoeast": "1189987892223815740",
         "foxtrotwest": "1189987933831319744",
         "foxtroteast": "1189987969646481551",
-        "reaper": "1189987992102781079"
+        "reaper": "1189987992102781079",
+        "golfwest": "1190026099560816740",
+        "golfeast": "1190026133123629127"
     },
     "roles": {
         "cadet": "1163925341593677875",
@@ -16,7 +18,9 @@
         "echoeast": "1164438307577532426",
         "foxtrotwest": "1164438466310967296",
         "foxtroteast": "1164438425059995688",
-        "reaper": "1164274765251477565"
+        "reaper": "1164274765251477565",
+        "golfwest": "1188287121644068884",
+        "golfeast": "1188287440591540225"
     },
     "chars": {
         "space": "",
