ready to deploy

--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
+    "guildId": "1163632023076872244",
     "channels": {
         "cadet": "1189467374265577512",
         "recruit": "1189987833272873092",
